# scrapy-router

./: pyproject.toml
examples/: books_spider.py  example_spider.py
src/scrapy_router/: router.py
