[project]
name = "scrapy-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michel Ace", email = "divtiply@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "url-matcher>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "scrapy>=2.10.0",
]
